short comment alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,7 @@
     display: grid;
     gap: 1em;
     width: 100%;
+    align-items: baseline;
   }
   
   .content-top {
